# germanymod-pc

./: .gitignore  CMakeLists.txt  CMakeSettings.json  New Text Document.txt  README.md  proplam-pg-main.rar
.github/workflows/: cmake-single-platform.yml
archive/framework/: UIManager.cpp  UIManager.hpp
archive/menu/: DumperMenu.hpp  ReverseToolMenu.hpp
dependencies/Fileutils/: CmakeLists.txt
dependencies/Fileutils/src/: FileUtils.cpp  FileUtils.h
dependencies/ImGui/: CMakeLists.txt  readme.md
dependencies/ImGui/src/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_widgets.cpp  imstb_truetype.h
dependencies/Logger/: CMakeLists.txt
dependencies/Logger/src/: Logger.cpp  Logger.hpp
dependencies/TulipHook/: CMakeLists.txt  readme.md
dependencies/base64/: CmakeLists.txt
dependencies/base64/src/: base64.cpp
dependencies/proplamatic-il2cpp/exceptions/: ExceptionBase.cpp
dependencies/proplamatic-il2cpp/misc/: CommonGameStructs.hpp
dependencies/proplamatic-il2cpp/service/: ClassMapping.cpp  ClassMapping.hpp  CommonCShrap.hpp  Dumper.cpp
dependencies/proplamatic-il2cpp/structures/: Class.cpp  Object.hpp
header-dependencies/: HttpService.hpp  WinReg.hpp  imgui_notify.hpp  obfuscator.h
script/: ExternMenuComponents.py  PointerFunctionsGen.py  ReadCrashStacktrace.py
src/loader/: Test.cpp  Test.hpp  main.cpp  main.hpp
src/loader/test/: GdiPlusManager.cpp  GdiPlusManager.hpp  TestMemPatcher.cpp  TestMemPatcher.hpp
src/runtime/: Bootstrap.cpp  Bootstrap.hpp  entrypoint.cpp  entrypoint.hpp
src/runtime/algorithm/: Dumper.cpp  Dumper.hpp  HookTracer.cpp  (+1 more)
(+120 files in other folders)
